cursor and overflow fix in assignments page

--- a/src/components/assignmentsPage/components/play/AssignedBricks.scss
+++ b/src/components/assignmentsPage/components/play/AssignedBricks.scss
@@ -16,6 +16,7 @@
 
 
 .student-assignments-page .classroom-name-v5 {
+  cursor: pointer;
   margin-top: 0.9vw;
   margin-left: 0.9vw;
   margin-right: 1.3vw;
